# pkarena0-web

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  package-lock.json  package.json  playwright.config.ts
.playwright-mcp/: page-2026-04-19T23-19-25-708Z.yml  page-2026-04-19T23-20-19-556Z.yml
docs/: FEATURE_new_table.md  FEATURE_player_stats.md  FEATURE_pnl.md  audio-integration.md  blind-structure.md  design-evaluation.md  known-issues.md  voice-script.md
docs/releases/: v0.1.0.md
playwright-report/: index.html
scripts/: gen_icons.py
src/: lib.rs
tests/: game.spec.ts  helpers.ts  ui.spec.ts  yaml-download.spec.ts
www/: index.html  manifest.json
www/audio/: voice.js
www/audio/adapters/: live.js
