[package]
name = "pkarena0-web"
version = "0.0.1"
edition = "2024"
rust-version = "1.91.0"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[dependencies]
pkcore = { path = "../pkcore", features = ["bot-profiles", "hand-histories"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
