[package]
name = "pkarena0-web"
description = "single player playing agains a table of bots using pkcore."
repository = "https://github.com/ImperialBower/pkarena0-web"
version = "0.0.7"
edition = "2024"
rust-version = "1.94.1"
license = "GPL-3.0-or-later"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "validate-yaml"
path = "src/bin/validate_yaml.rs"

[dependencies]
pkcore = { version = "0.0.44", features = ["bot-profiles", "hand-histories"] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
rand = "0.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
